[package]
edition = "2021"
name = "napi-cross-build_01-pure-rust"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
lz-str = "0.2"

[build-dependencies]
napi-build = "2"
