[package]
edition = "2021"
name = "napi-cross-build_01-pure-rust"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { workspace = true }
napi-derive = { workspace = true }
lz-str = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
